# wally

./: database.json  main.py  pyproject.toml
assets/rofi/select_mode/theme/: mode.rasi
assets/rofi/type/theme/: gallery.rasi  row.rasi
core/: __init__.py  config.py  launcher.py
core/menu/: menu_enum.py  menu_handler.py
core/paths/: path_handler.py  path_list.py
services/: __init__.py  dependencies.py  file_manager.py  is_nerdfonts.py  json_manager.py  logger.py  notify.py  rofi.py  shell.py  thumbnail_converter.py  wallpaper_selection.py  wallpaper_selection_data_base_handler.py  wallpaper_selection_handler.py
services/dependencies/: dependencies.py  dependencies_enum.py
tests/: config.py  dependencies.py  shell.py
utils/: __init__.py
utils/decoratrs/: log_exceptions.py
