[project]
name = "wally"
version = "0.1.0"
description = "wally is a simple rofi wallpaper manager"
authors = [
    { name = "Marat Arzymatov", email = "maratarzymatov288@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maarutan/wally"
Repository = "https://github.com/maarutan/wally"
Issues = "https://github.com/maarutan/wally/issues"

[project.scripts]
wally = "wally.__main__:main"

